2022-03-01 bugsquash

--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,6 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 7.5px;
-  padding-right: 7.5px;
   background-color: rgb(36, 36, 36);
 }
 
@@ -70,6 +68,7 @@ code {
 }
 
 .enter-button {
+  color:black;
   position:absolute;
   font-size: 22.5px;
   font-family: "Inter", sans-serif;
